# IRIS

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  UI_SPEC.md  codeium-debug-logs-2026-04-23-10-14.txt  docker-compose.staging.yml  docker-compose.yml  nginx.conf  package-lock.json  palette.json  СТАРТ.bat  СТОП.bat
project-root/backend/: .env.example  .env.postgres  .env.prod  add_sample_data.py  alembic.ini  check_all_datetime.py  check_api.ps1  check_api_full.py  check_archive_data.py  check_archive_tables.py  check_data_counts.py  check_db.py  check_db_state.py  check_endpoints.py  check_output.txt  check_project_uuid.py  check_projects.py  check_projects_schema.py  check_remarks_count.py  check_tables.py  check_users.py  create_admin_if_not_exists.py  create_all_tables.py  create_remarks_table.py  create_test_user.py  fix_admin_password.py  fix_all_datetime.py  fix_datetime_format.py  fix_password.py  fix_projects_schema.py  fix_remarks_table.py  gen_hash.py  init_db.py  migrate_sqlite.py  output.txt  pyproject.toml  requirements.txt  reseed_archive.py  reset_admin_password.py  reset_password.py  (+26 more)
project-root/backend/alembic/: alembic_stamp.py  alembic_stamp_sync.py  env.py
project-root/backend/alembic/versions/: 20260429_110355_add_tender_portfolio_fields.py  20260501_090000_add_tasks_and_production_tables.py  544e3601aad5_init_all_tables.py  5531966b21a6_merge_multiple_heads.py  604c20d8dad2_add_partial_index_for_overdue_tasks.py  6bb361a0f4ae_create_all_tables_from_models.py  76a4efa5dc26_add_document_dependencies.py  a3d538911e15_add_remarks_tables.py  add_archive_tables.py  add_performance_indexes.py  de47c64cbf89_init.py  (+3 more)
project-root/backend/app/: main.py
project-root/backend/scripts/: backup_db.py  check_architecture.py  export_sqlite_to_postgres.py  generate_secret_key.py  security_check.py  seed_data.py
project-root/backend/tests/: conftest.py  test_ai_service.py  test_architecture.py  test_auth_api.py  test_collaboration_ws.py  test_documents_api.py  test_gamification_api.py  test_other_modules_api.py  test_parser.py  test_projects_api.py  test_tasks_api.py
(+448 files in other folders)
