[project]
name = "dokpotok-iris-backend"
version = "0.1.0"
description = "Engineering Document Management System"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "e2e: marks tests as end-to-end tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "architecture: marks tests as architecture checks",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "alembic/*",
    "__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
fail_under = 70

[tool.black]
line-length = 88
exclude = '''
/(
  \.git
 | \.venv
 | build
 | dist
 | __pycache__
)/
'''

[tool.ruff]
line-length = 88
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
  "__pycache__",
]
